<resources>
    <string name="app_name">Nouste</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="to_do">To do</string>
    <string name="notes">Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_text">Note Text</string>
    <string name="todo">Todo…</string>
    <string name="add_note_button">Add note button</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="note_name_error">Note must have title!</string>
    <string name="back_button">Back button</string>
    <string name="create_button">Create button</string>
    <string name="select_image">Select image</string>
    <string name="open_gradients">Open gradients</string>
    <string name="logotype">Logotype</string>
    <string name="menu_anchor">Menu anchor</string>
    <string name="add_todo">Add todo</string>
</resources>