<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isInputValid"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/noteToolBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="?attr/actionBarSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/karla_bold"
                    android:maxWidth="@dimen/_155sdp"
                    android:maxHeight="?attr/actionBarSize"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17ssp"
                    app:layout_constraintBottom_toBottomOf="@id/noteToolBar"
                    app:layout_constraintEnd_toEndOf="@+id/noteToolBar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/back"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintBottom_toBottomOf="@id/noteToolBar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/noteToolBar" />

                <ImageView
                    android:id="@+id/btnSaveNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_check"
                    android:visibility="@{isInputValid ? View.VISIBLE : View.GONE, default=gone}"
                    app:layout_constraintBottom_toBottomOf="@+id/noteToolBar"
                    app:layout_constraintEnd_toEndOf="@+id/noteToolBar"
                    app:layout_constraintTop_toTopOf="@+id/noteToolBar"
                    app:tint="@color/black" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="7dp"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp"
            tools:layout_editor_absoluteX="12dp">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
                app:tabBackground="@drawable/tab_background"
                app:tabGravity="fill"
                app:tabIndicatorHeight="0dp"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/white"
                app:tabTextAppearance="@style/TabTextAppearance"
                app:tabTextColor="@color/black">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_do" />

            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/note_title"
            android:inputType="text|textNoSuggestions|textMultiLine"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/grayText"
            app:errorEnabled="true"
            app:hintTextColor="@color/grayText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:paddingBottom="@dimen/_5sdp"
                android:textCursorDrawable="@drawable/cursor_with_padding"
                android:textSize="@dimen/_20ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNoteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@null"
            android:hint="@string/note_text"
            android:inputType="text|textNoSuggestions|textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/rivNoteImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNoteText"
            app:riv_corner_radius="10dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/btnAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_image"
                app:tint="@color/black" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/btnSetGradient"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/_20sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/main_gradient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNoteText"
                app:riv_corner_radius="30dip" />

            <ImageView
                android:id="@+id/btnShowGradients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_arrow_forward" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>